force-app/main/default/objects/ssot__PaymentRequestLine__dlm/fields/ssot__AdjustmentReasonText__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdjustmentReasonText__c</fullName>
    <label>Adjustment Reason</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdjustmentReasonText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>