force-app/main/default/objects/ssot__PaymentRequestLine__dlm/fields/ssot__DiagnosticCodeObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosticCodeObject__c</fullName>
    <label>Diagnostic Code Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosticCodeObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>