force-app/main/default/objects/ssot__PaymentRequestLine__dlm/fields/ssot__FacilityObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__FacilityObject__c</fullName>
    <label>Facility Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FacilityObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>