force-app/main/default/objects/ssot__PaymentRequestLine__dlm/fields/ssot__PaymentRequestId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentRequestId__c</fullName>
    <label>Payment Request</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentRequestId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>