force-app/main/default/objects/ssot__PaymentRequestLine__dlm/fields/ssot__PaymentRequestLineServiceType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentRequestLineServiceType__c</fullName>
    <label>Payment Request Line Service Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentRequestLineServiceType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>