force-app/main/default/objects/ssot__PaymentRequestLine__dlm/fields/ssot__Quantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__Quantity__c</fullName>
    <label>Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Quantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>