force-app/main/default/objects/ssot__PaymentRequestLine__dlm/fields/ssot__rel_1731658744520_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658744520_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentRequestLine_FacilityId_map_He_rel</label>
    <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
    <relationshipLabel>PaymentRequestLine_FacilityId_map_He_rel</relationshipLabel>
    <relationshipName>rel_1731658744520_end</relationshipName>
    <type>Lookup</type>
</CustomField>