force-app/main/default/objects/ssot__PaymentRequestLine__dlm/fields/ssot__rel_1731658746503_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658746503_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentRequestLine_DiagnosticCodeId__rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>PaymentRequestLine_DiagnosticCodeId__rel</relationshipLabel>
    <relationshipName>rel_1731658746503_end</relationshipName>
    <type>Lookup</type>
</CustomField>