force-app/main/default/objects/ssot__PaymentRequestLine__dlm/fields/ssot__ServiceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceAmount__c</fullName>
    <label>Service Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>