force-app/main/default/objects/ssot__PaymentRequestLine__dlm/fields/ssot__ServiceCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceCodeId__c</fullName>
    <label>Service Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>